--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -9,45 +9,80 @@
 
     <EditText
         android:id="@+id/editTextEmailNovoCadastro"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPasswordNovoCadastro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.772" />
+        app:layout_constraintVertical_bias="0.345" />
 
     <EditText
         android:id="@+id/editTextTextPasswordNovoCadastro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="108dp"
         android:ems="10"
         android:hint="Senha"
         android:inputType="textPassword"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonRealizarCadastro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonRealizarCadastro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="452dp"
-        android:text="Cadastrar"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
+        android:layout_marginBottom="36dp"
+        android:text="Cadastrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Nome"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPassword2"
+        android:layout_width="305dp"
+        android:layout_height="48dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        android:hint="Confirmar Senha"
+        tools:layout_editor_absoluteX="53dp"
+        tools:layout_editor_absoluteY="555dp" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Sobrenome"
+        tools:layout_editor_absoluteX="19dp"
+        tools:layout_editor_absoluteY="85dp" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="231dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
