--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="130dp"
-        android:layout_height="190dp"
-        android:layout_marginEnd="8dp"
-        app:cardCornerRadius="5dp"
+        android:layout_height="250dp"
+        android:layout_margin="12dp"
+        android:checkable="true"
         android:clickable="true"
         android:focusable="true"
-        android:checkable="true">
+        app:cardCornerRadius="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,27 +25,27 @@
             <ImageView
                 android:id="@+id/itemMoviePosterImageView"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="centerCrop"/>
+                android:layout_height="200dp"
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/movieTitleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
+                android:text="Title"
                 android:textColor="@color/black"
-                android:textSize="12sp"
-                android:text="Title"/>
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/movieDescriptionTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/black"
-                android:textSize="8sp"
                 android:maxLines="3"
-                android:text="Description"/>
+                android:text="Description"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
