--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/movie_fragment" />
 
     <fragment
-        android:id="@+id/drawer_nav_gallery"
-        android:name="com.example.movieapp.view.ui.gallery.GalleryFragment"
+        android:id="@+id/drawer_nav_settings"
+        android:name="com.example.movieapp.view.ui.gallery.SettingsFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/activity_settings" />
 
     <fragment
         android:id="@+id/drawer_nav_slideshow"
