--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light_cornflower_blue">#8ECAE6</color>
     <color name="blue_green">#219EBC</color>
     <color name="prussian_blue">#023047</color>
+    <color name="dark_gray">#212121</color>
 </resources>
