--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,8 +40,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appBarNavigation"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
-            app:navGraph="@navigation/mobile_navigation" />
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavigation" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigation"
