--- a/app/src/main/res/menu/drawer_home_navigation.xml
+++ b/app/src/main/res/menu/drawer_home_navigation.xml
@@ -22,9 +22,9 @@
 
 
             <item
-                android:id="@+id/drawer_nav_slideshow"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="@string/menu_slideshow" />
+                android:id="@+id/drawer_nav_notifications"
+                android:icon="@drawable/ic_baseline_notifications_active_24"
+                android:title="@string/menu_notification" />
 
         </menu>
     </item>
