--- a/app/src/main/res/layout/movie_fragment.xml
+++ b/app/src/main/res/layout/movie_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".view.MovieFragment">
 
@@ -32,5 +33,14 @@
         android:clipToPadding="false"
         android:paddingStart="16dp"
         android:paddingEnd="16dp" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationViewGithub"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        app:lottie_rawRes="@raw/movie_loading"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true" />
 
 </LinearLayout>
