--- a/app/src/main/res/menu/drawer_home_navigation.xml
+++ b/app/src/main/res/menu/drawer_home_navigation.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
     <item android:title="@string/menu_home_title">
         <menu>
-
+<!--            <group android:checkableBehavior="single">-->
             <item
                 android:id="@+id/drawer_nav_home"
                 android:icon="@drawable/ic_baseline_home_24"
                 android:title="@string/menu_home" />
-
+<!--            </group>-->
         </menu>
     </item>
 
