--- a/app/src/main/res/layout/movie_fragment.xml
+++ b/app/src/main/res/layout/movie_fragment.xml
@@ -34,13 +34,13 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp" />
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animationViewGithub"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center"
-        app:lottie_rawRes="@raw/movie_loading"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true" />
+<!--    <com.airbnb.lottie.LottieAnimationView-->
+<!--        android:id="@+id/animationViewGithub"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_gravity="center"-->
+<!--        app:lottie_rawRes="@raw/movie_loading"-->
+<!--        app:lottie_autoPlay="true"-->
+<!--        app:lottie_loop="true" />-->
 
 </LinearLayout>
