--- a/app/src/main/res/layout/item_favoritos.xml
+++ b/app/src/main/res/layout/item_favoritos.xml
@@ -2,24 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardViewMovie"
         android:layout_width="140dp"
         android:layout_height="235dp"
-        android:layout_margin="12dp"
-        app:cardElevation="8dp"
+        android:backgroundTint="@color/dark_gray"
         android:checkable="true"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="5dp"
-        android:backgroundTint="@color/dark_gray"
-        app:layout_constraintStart_toStartOf="parent"
+        app:cardElevation="@dimen/normal_padding"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -30,11 +29,11 @@
                 android:id="@+id/itemMoviePosterImageView"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-         <TextView
+            <TextView
                 android:id="@+id/movieTitleTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
