--- a/app/src/main/res/layout/item_genres.xml
+++ b/app/src/main/res/layout/item_genres.xml
@@ -31,13 +31,11 @@
         app:layout_constraintTop_toBottomOf="@id/movieGenreTextView"/>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/CardViewVerMais"
+        android:id="@+id/cardViewVerMais"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toBottomOf="@+id/movieGenreTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/movieGenreTextView">
