--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -78,6 +78,7 @@
                     android:id="@+id/emailEditTextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:inputType="textEmailAddress"
                     android:hint="@string/login_email" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -101,9 +102,10 @@
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passwordEditTextView"
+                    android:id="@+id/passwordEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:inputType="textPassword"
                     android:hint="@string/login_password" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -127,9 +129,10 @@
                 app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passwordConfirmEditTextView"
+                    android:id="@+id/passwordConfirmEditText"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:inputType="textPassword"
                     android:hint="@string/login_password" />
             </com.google.android.material.textfield.TextInputLayout>
 
